--- a/wiki/example.wiki
+++ b/wiki/example.wiki
@@ -29,7 +29,7 @@ lnc_class -- a list of classcodes, which may contain lncRNAs
 
  * extract_ORF -- get IDs of transcripts with ORF length < 300
 
-   (1) get longest ORF length of transcripts_2.fa
+   (1) get longest ORF length of transcripts_2.fa using UCSC table browser
 <code>
     $ longorf.pl --input transcripts_2.fa > transcripts_2.orf.list
 </code>
@@ -39,7 +39,7 @@ lnc_class -- a list of classcodes, which may contain lncRNAs
     $ awk '($2<300){print $1}' transcripts_2.orf.list > transcripts_3.list
 </code>
 
-   (3) trim the IDs in transcripts_3.list
+   (3) trim the IDs in transcripts_3.list (If the transcript IDs have been changed, you should recover the IDs using appropriate commands as below)
 <code>
     $ perl -ne '@aa = split(/_/);print $aa[4]; for($i=5;$i<scalar(@aa);$i++){print "_", $aa[$i]}' transcripts_3.list > transcripts_3.renamed.list
 </code>
