--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -11,6 +11,10 @@ Unix/Linux
 
 <li>Download "lncrscan" which contains three folders to your home directory _MY_DIR_.
 
+<code>
+svn checkout http://lncrscan.googlecode.com/svn/trunk/ lncrscan-read-only
+</code>
+
 <li>Set environmental variables on your OS by modifying _.bashrc_
 
 <code>
@@ -23,4 +27,3 @@ export PERL5LIB=$PERL5LIB:/MY_DIR/lib
 <code>
 chmod 0775 /MY_DIR/bin/*
 </code>
-
