--- a/Readme
+++ b/Readme
@@ -22,7 +22,8 @@ Step 5 'extract Pfam'-- exclude transcripts with significant domain hits by sear
    -- Set environmental variables on you OS by modifying .bashrc
       $ export PATH=$PATH:/MY_DIR/scripts
       $ export PERL5LIB=$PERL5LIB:/MY_DIR/lib
- 
+   -- Use the new environmental variables
+      $ source .bashrc
    -- Make all scripts executable by
       $ chmod 0775 /MY_DIR/script/*
       
