--- a/trunk/Readme
+++ b/trunk/Readme
@@ -20,8 +20,8 @@ Step 5 'extract Pfam'-- exclude transcripts with significant domain hits by sear
    -- Download "lncrscan" which contains three folders to your home directory MY_DIR (e.g. YOUR_DIR/lncrscan-read-only).
       $ svn checkout http://lncrscan.googlecode.com/svn/trunk/ lncrscan-read-only
    -- Set environmental variables on you OS by modifying .bashrc
-      $ export PATH=$PATH:/MY_DIR/scripts
-      $ export PERL5LIB=$PERL5LIB:/MY_DIR/lib
+      export PATH=$PATH:/MY_DIR/scripts
+      export PERL5LIB=$PERL5LIB:/MY_DIR/lib
    -- Use the new environmental variables
       $ source .bashrc
    -- Make all scripts executable by
